crates/compiler/parser/tests/snapshots/constant_folding::test_complex_expression.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---

        fn main() -> felt {
            let x = 3 + 4 * 2;
            return x;
        }
        
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "main",
                    12..16,
                ),
                params: [],
                return_type: Spanned(
                    Named(
                        Spanned(
                            Felt,
                            22..26,
                        ),
                    ),
                    22..26,
                ),
                body: [
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "x",
                                    45..46,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                Literal(
                                    11,
                                    None,
                                ),
                                49..58,
                            ),
                        },
                        41..59,
                    ),
                    Spanned(
                        Return {
                            value: Some(
                                Spanned(
                                    Identifier(
                                        Spanned(
                                            "x",
                                            79..80,
                                        ),
                                    ),
                                    79..80,
                                ),
                            ),
                        },
                        72..81,
                    ),
                ],
            },
            9..91,
        ),
    ),
]
