crates/compiler/parser/tests/snapshots/constant_folding::test_division.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---

        fn main() -> felt {
            let x = 12 / 3;
            return x;
        }
        
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "main",
                    12..16,
                ),
                params: [],
                return_type: Spanned(
                    Named(
                        Spanned(
                            Felt,
                            22..26,
                        ),
                    ),
                    22..26,
                ),
                body: [
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "x",
                                    45..46,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                Literal(
                                    4,
                                    None,
                                ),
                                49..55,
                            ),
                        },
                        41..56,
                    ),
                    Spanned(
                        Return {
                            value: Some(
                                Spanned(
                                    Identifier(
                                        Spanned(
                                            "x",
                                            76..77,
                                        ),
                                    ),
                                    76..77,
                                ),
                            ),
                        },
                        69..78,
                    ),
                ],
            },
            9..88,
        ),
    ),
]
