crates/compiler/parser/tests/snapshots/constant_folding::test_simple_addition.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---

        fn main() -> felt {
            let x = 3 + 4;
            return x;
        }
        
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "main",
                    12..16,
                ),
                params: [],
                return_type: Spanned(
                    Named(
                        Spanned(
                            Felt,
                            22..26,
                        ),
                    ),
                    22..26,
                ),
                body: [
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "x",
                                    45..46,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                Literal(
                                    7,
                                    None,
                                ),
                                49..54,
                            ),
                        },
                        41..55,
                    ),
                    Spanned(
                        Return {
                            value: Some(
                                Spanned(
                                    Identifier(
                                        Spanned(
                                            "x",
                                            75..76,
                                        ),
                                    ),
                                    75..76,
                                ),
                            ),
                        },
                        68..77,
                    ),
                ],
            },
            9..87,
        ),
    ),
]
