crates/compiler/parser/tests/snapshots/constant_folding::test_with_suffix.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---

        fn main() -> u32 {
            let x = 3u32 + 4u32;
            return x;
        }
        
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "main",
                    12..16,
                ),
                params: [],
                return_type: Spanned(
                    Named(
                        Spanned(
                            U32,
                            22..25,
                        ),
                    ),
                    22..25,
                ),
                body: [
                    Spanned(
                        Let {
                            pattern: Identifier(
                                Spanned(
                                    "x",
                                    44..45,
                                ),
                            ),
                            statement_type: None,
                            value: Spanned(
                                Literal(
                                    7,
                                    Some(
                                        "u32",
                                    ),
                                ),
                                48..59,
                            ),
                        },
                        40..60,
                    ),
                    Spanned(
                        Return {
                            value: Some(
                                Spanned(
                                    Identifier(
                                        Spanned(
                                            "x",
                                            80..81,
                                        ),
                                    ),
                                    80..81,
                                ),
                            ),
                        },
                        73..82,
                    ),
                ],
            },
            9..92,
        ),
    ),
]
