crates/compiler/parser/tests/snapshots/expressions::addition.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { a + b; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                BinaryOp {
                                    op: Add,
                                    left: Spanned(
                                        Identifier(
                                            Spanned(
                                                "a",
                                                12..13,
                                            ),
                                        ),
                                        12..13,
                                    ),
                                    right: Spanned(
                                        Identifier(
                                            Spanned(
                                                "b",
                                                16..17,
                                            ),
                                        ),
                                        16..17,
                                    ),
                                },
                                12..17,
                            ),
                        ),
                        12..18,
                    ),
                ],
            },
            0..20,
        ),
    ),
]
