crates/compiler/parser/tests/snapshots/expressions::array_index.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { arr[0]; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                IndexAccess {
                                    array: Spanned(
                                        Identifier(
                                            Spanned(
                                                "arr",
                                                12..15,
                                            ),
                                        ),
                                        12..15,
                                    ),
                                    index: Spanned(
                                        Literal(
                                            0,
                                        ),
                                        16..17,
                                    ),
                                },
                                12..17,
                            ),
                        ),
                        12..19,
                    ),
                ],
            },
            0..21,
        ),
    ),
]
