crates/compiler/parser/tests/snapshots/expressions::chained_calls.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { obj.method().another(); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                FunctionCall {
                                    callee: Spanned(
                                        MemberAccess {
                                            object: Spanned(
                                                FunctionCall {
                                                    callee: Spanned(
                                                        MemberAccess {
                                                            object: Spanned(
                                                                Identifier(
                                                                    Spanned(
                                                                        "obj",
                                                                        12..15,
                                                                    ),
                                                                ),
                                                                12..15,
                                                            ),
                                                            field: Spanned(
                                                                "method",
                                                                16..22,
                                                            ),
                                                        },
                                                        12..22,
                                                    ),
                                                    args: [],
                                                },
                                                12..24,
                                            ),
                                            field: Spanned(
                                                "another",
                                                25..32,
                                            ),
                                        },
                                        12..32,
                                    ),
                                    args: [],
                                },
                                12..34,
                            ),
                        ),
                        12..35,
                    ),
                ],
            },
            0..37,
        ),
    ),
]
